--- a/.github/workflows/coveragetest.yml
+++ b/.github/workflows/coveragetest.yml
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +17,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+    
+    - name: Install Chrome
+      uses: nanasess/setup-chromedriver@v2
 
     - name: Install dependencies
       run: |
@@ -25,6 +27,11 @@ jobs:
         pip install selenium pandas bs4 requests matplotlib openpyxl
         pip install coverage
 
+  test-query:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
     - name: Run Python script with multiple inputs
       run: |
         echo "d" >> inputs.txt
