--- a/.github/workflows/coveragetest.yml
+++ b/.github/workflows/coveragetest.yml
@@ -21,17 +21,17 @@ jobs:
     - name: Install Chrome
       uses: nanasess/setup-chromedriver@v2
 
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install selenium pandas bs4 requests matplotlib openpyxl
         pip install coverage
-
-  test-query:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
+    
     - name: Run Python script with multiple inputs
       run: |
         echo "d" >> inputs.txt
