--- a/.github/workflows/coveragetest.yml
+++ b/.github/workflows/coveragetest.yml
@@ -1,4 +1,4 @@
-name: Coverage Testing
+name: Levels.fyi Crawler CI
 
 on:
   push:
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -17,21 +18,22 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
+    - uses: nanasess/setup-chromedriver@v2
+      with:
+        # Optional: do not specify to match Chrome's version
+        chromedriver-version: '88.0.4324.96'
+    - run: |
+        export DISPLAY=:99
+        chromedriver --url-base=/wd/hub &
+        sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
     
-    - name: Install Chrome
-      uses: nanasess/setup-chromedriver@v2
-
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install selenium pandas bs4 requests matplotlib openpyxl
         pip install coverage
-    
+
     - name: Run Python script with multiple inputs
       run: |
         echo "d" >> inputs.txt
