feat: Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-selenium==4.1.0
-panda==0.3.1
-pandas==1.2.3
-beautifulsoup4==4.10.0
-requests==2.31.0
-matplotlib==3.4.2
-matplotlib-inline==0.1.6
-pytest==6.2.4
+selenium
+pandas
+beautifulsoup4
+requests
+matplotlib
+matplotlib-inline
+pytest
+fastapi
+uvicorn
+openpyxl
+python-dotenv
